--- a/trunk/MagicOfGathering/locale/en_US/main.properties
+++ b/trunk/MagicOfGathering/locale/en_US/main.properties
@@ -21,3 +21,7 @@ loadContainer.failed=Failed:
 
 # build container
 buildContainer.loadCard=loading card information......
+buildContainer.list.title1=Select
+buildContainer.list.title2=Image
+buildContainer.list.title3=Name
+buildContainer.list.title4=Description
