--- a/trunk/MagicOfGathering/locale/zh_CN/main.properties
+++ b/trunk/MagicOfGathering/locale/zh_CN/main.properties
@@ -21,3 +21,7 @@ loadContainer.failed=失败数:
 
 # build container
 buildContainer.loadCard=读取信息中......
+buildContainer.list.title1=选择
+buildContainer.list.title2=缩略图
+buildContainer.list.title3=名字
+buildContainer.list.title4=描述
