selection enhancement a percent height issue

--- a/MagicOfGathering/locale/en_US/main.properties
+++ b/MagicOfGathering/locale/en_US/main.properties
@@ -25,3 +25,4 @@ buildContainer.list.title1=Select
 buildContainer.list.title2=Image
 buildContainer.list.title3=Name
 buildContainer.list.title4=Description
+buildContainer.list.title5=Count
