--- a/trunk/MagicOfGathering/locale/en_US/main.properties
+++ b/trunk/MagicOfGathering/locale/en_US/main.properties
@@ -14,10 +14,12 @@ loadContainer.title=Extract cards:
 loadContainer.startIndex=Start index:
 loadContainer.endIndex=End index:
 loadContainer.collectionName=Collection name:
+loadContainer.knownCollections=Known Collections:
 loadContainer.extract=Extract
 loadContainer.total=Total:
 loadContainer.finished=Finished:
 loadContainer.failed=Failed:
+
 
 # build container
 buildContainer.loadCard=loading card information......
