--- a/MagicOfGathering/locale/zh_CN/main.properties
+++ b/MagicOfGathering/locale/zh_CN/main.properties
@@ -14,6 +14,7 @@ loadContainer.title=提取卡牌:
 loadContainer.startIndex=起始序号:
 loadContainer.endIndex=结束序号:
 loadContainer.collectionName=套牌名:
+loadContainer.knownCollections=已知套牌:
 loadContainer.extract=提取
 loadContainer.total=总数:
 loadContainer.finished=完成数:
