--- a/trunk/MagicOfGathering/locale/en_US/main.properties
+++ b/trunk/MagicOfGathering/locale/en_US/main.properties
@@ -28,3 +28,4 @@ buildContainer.list.title2=Image
 buildContainer.list.title3=Name
 buildContainer.list.title4=Description
 buildContainer.list.title5=Count
+buildContainer.save=Save
