--- a/MagicOfGathering/locale/en_US/main.properties
+++ b/MagicOfGathering/locale/en_US/main.properties
@@ -29,3 +29,4 @@ buildContainer.list.title3=Name
 buildContainer.list.title4=Description
 buildContainer.list.title5=Count
 buildContainer.save=Save
+buildContainer.saving=Saving......
