--- a/trunk/MagicOfGathering/locale/zh_CN/main.properties
+++ b/trunk/MagicOfGathering/locale/zh_CN/main.properties
@@ -28,3 +28,4 @@ buildContainer.list.title3=名字
 buildContainer.list.title4=描述
 buildContainer.list.title5=数量
 buildContainer.save=保存
+buildContainer.saving=保存中......
