--- a/trunk/MagicOfGathering/locale/en_US/main.properties
+++ b/trunk/MagicOfGathering/locale/en_US/main.properties
@@ -1,5 +1,13 @@
 # locale/en_US/main.properties
 
+# common
+save=Save
+load=Load
+cancel=Cancel
+loading=Loading...
+player=Player
+next=Next
+
 # view containers' name
 initContainer.label=Initialize
 loadContainer.label=Load
@@ -20,7 +28,6 @@ loadContainer.total=Total:
 loadContainer.finished=Finished:
 loadContainer.failed=Failed:
 
-
 # build container
 buildContainer.loadCard=loading card information......
 buildContainer.list.title1=Select
@@ -30,3 +37,11 @@ buildContainer.list.title4=Description
 buildContainer.list.title5=Count
 buildContainer.save=Save
 buildContainer.saving=Saving......
+
+# play container
+play.prepare.title1=Choose Collections:
+
+#popups
+loadCardCollPopup.loadList=Collection List
+
+
