--- a/trunk/MagicOfGathering/locale/zh_CN/main.properties
+++ b/trunk/MagicOfGathering/locale/zh_CN/main.properties
@@ -1,5 +1,13 @@
 # locale/zh_CN/main.properties
 
+# common
+save=保存
+load=读取
+cancel=取消
+loading=读取中...
+player=玩家
+next=下一步
+
 # view containers' name
 initContainer.label=初始化
 loadContainer.label=读取卡牌
@@ -29,3 +37,9 @@ buildContainer.list.title4=描述
 buildContainer.list.title5=数量
 buildContainer.save=保存
 buildContainer.saving=保存中......
+
+# play container
+play.prepare.title1=选择套牌:
+
+#popups
+loadCardCollPopup.loadList=存储的套牌
