--- a/MagicOfGathering/locale/en_US/main.properties
+++ b/MagicOfGathering/locale/en_US/main.properties
@@ -40,6 +40,8 @@ buildContainer.saving=Saving......
 
 # play container
 play.prepare.title1=Choose Collections:
+play.handList.title=Cards in hand:
+play.creatureList.title=Field - Creatures:
 
 #popups
 loadCardCollPopup.loadList=Collection List
