--- a/trunk/MagicOfGathering/locale/en_US/main.properties
+++ b/trunk/MagicOfGathering/locale/en_US/main.properties
@@ -43,6 +43,9 @@ buildContainer.saving=Saving......
 play.prepare.title1=Choose Collections:
 play.handList.title=Cards in hand:
 play.creatureList.title=Field - Creatures:
+play.magicList.title=Field - Magic:
+play.artifactList.title=Field - artifact:
+
 
 #popups
 loadCardCollPopup.loadList=Collection List
