--- a/MagicOfGathering/locale/zh_CN/main.properties
+++ b/MagicOfGathering/locale/zh_CN/main.properties
@@ -43,6 +43,8 @@ buildContainer.saving=保存中......
 play.prepare.title1=选择套牌:
 play.handList.title=手上的牌:
 play.creatureList.title=战场 - 生物:
+play.magicList.title=战场 - 魔法:
+play.artifactList.title=战场 - 宝物:
 
 #popups
 loadCardCollPopup.loadList=存储的套牌
