--- a/MagicOfGathering/locale/zh_CN/main.properties
+++ b/MagicOfGathering/locale/zh_CN/main.properties
@@ -8,6 +8,10 @@ loading=读取中...
 player=玩家
 next=下一步
 close=关闭
+gallery=牌堆
+graveyard=坟场
+hp=血量
+magicPool=魔法池
 
 # view containers' name
 initContainer.label=初始化
@@ -40,8 +44,11 @@ buildContainer.save=保存
 buildContainer.saving=保存中......
 
 # play container
+play.list.count=数量:
+
 play.prepare.title1=选择套牌:
 play.handList.title=手上的牌:
+play.landList.title=战场 - 地牌:
 play.creatureList.title=战场 - 生物:
 play.magicList.title=战场 - 魔法:
 play.artifactList.title=战场 - 宝物:
