--- a/trunk/MagicOfGathering/locale/en_US/main.properties
+++ b/trunk/MagicOfGathering/locale/en_US/main.properties
@@ -8,6 +8,10 @@ loading=Loading...
 player=Player
 next=Next
 close=Close
+gallery=Gallery
+graveyard=Grave yard
+hp=HP
+magicPool=Magic Pool
 
 # view containers' name
 initContainer.label=Initialize
@@ -40,8 +44,11 @@ buildContainer.save=Save
 buildContainer.saving=Saving......
 
 # play container
+play.list.count=Count:
+
 play.prepare.title1=Choose Collections:
 play.handList.title=Cards in hand:
+play.landList.title=Field - Land:
 play.creatureList.title=Field - Creatures:
 play.magicList.title=Field - Magic:
 play.artifactList.title=Field - artifact:
