--- a/MagicOfGathering/locale/en_US/main.properties
+++ b/MagicOfGathering/locale/en_US/main.properties
@@ -10,6 +10,7 @@ next=Next
 close=Close
 gallery=Gallery
 graveyard=Grave yard
+outOfPlay=Out of play
 hp=HP
 magicPool=Magic Pool
 
@@ -56,5 +57,6 @@ play.artifactList.title=Field - artifact:
 
 #popups
 loadCardCollPopup.loadList=Collection List
-
+graveyardPopup.label=Card in Graveyard
+enhancementPopup.label=Enhancement
 
