--- a/MagicOfGathering/locale/zh_CN/main.properties
+++ b/MagicOfGathering/locale/zh_CN/main.properties
@@ -10,6 +10,7 @@ next=下一步
 close=关闭
 gallery=牌堆
 graveyard=坟场
+outOfPlay=战场外
 hp=血量
 magicPool=魔法池
 
@@ -55,3 +56,5 @@ play.artifactList.title=战场 - 宝物:
 
 #popups
 loadCardCollPopup.loadList=存储的套牌
+graveyardPopup.label=坟场中的牌
+enhancementPopup.label=增强
