--- a/MagicOfGathering/locale/en_US/main.properties
+++ b/MagicOfGathering/locale/en_US/main.properties
@@ -46,8 +46,6 @@ buildContainer.saving=Saving......
 
 # play container
 play.list.count=Count:
-
-play.prepare.title1=Choose Collections:
 play.handList.title=Cards in hand:
 play.landList.title=Field - Land:
 play.creatureList.title=Field - Creatures:
@@ -60,3 +58,7 @@ loadCardCollPopup.loadList=Collection List
 graveyardPopup.label=Card in Graveyard
 enhancementPopup.label=Enhancement
 
+#prepare
+play.prepare.init=Initialize:
+play.prepare.chooseCollection=Choose collection:
+play.prepare.selectColor=Select color:
