--- a/MagicOfGathering/locale/zh_CN/main.properties
+++ b/MagicOfGathering/locale/zh_CN/main.properties
@@ -46,8 +46,6 @@ buildContainer.saving=保存中......
 
 # play container
 play.list.count=数量:
-
-play.prepare.title1=选择套牌:
 play.handList.title=手上的牌:
 play.landList.title=战场 - 地牌:
 play.creatureList.title=战场 - 生物:
@@ -58,3 +56,8 @@ play.artifactList.title=战场 - 宝物:
 loadCardCollPopup.loadList=存储的套牌
 graveyardPopup.label=坟场中的牌
 enhancementPopup.label=增强
+
+#prepare
+play.prepare.init=初始化:
+play.prepare.chooseCollection=选择套牌:
+play.prepare.selectColor=选择颜色:
