--- a/MagicOfGathering/locale/en_US/main.properties
+++ b/MagicOfGathering/locale/en_US/main.properties
@@ -46,11 +46,13 @@ buildContainer.saving=Saving......
 
 # play container
 play.list.count=Count:
+play.playUtil.title=Controls
 play.handList.title=Cards in hand:
 play.landList.title=Field - Land:
 play.creatureList.title=Field - Creatures:
 play.magicList.title=Field - Magic:
 play.artifactList.title=Field - artifact:
+play.untapAll=Untap all
 
 
 #popups
