--- a/MagicOfGathering/locale/zh_CN/main.properties
+++ b/MagicOfGathering/locale/zh_CN/main.properties
@@ -46,11 +46,13 @@ buildContainer.saving=保存中......
 
 # play container
 play.list.count=数量:
+play.playUtil.title=控制
 play.handList.title=手上的牌:
 play.landList.title=战场 - 地牌:
 play.creatureList.title=战场 - 生物:
 play.magicList.title=战场 - 魔法:
 play.artifactList.title=战场 - 宝物:
+play.untapAll=还原所有牌
 
 #popups
 loadCardCollPopup.loadList=存储的套牌
