--- a/trunk/MagicOfGathering/locale/en_US/main.properties
+++ b/trunk/MagicOfGathering/locale/en_US/main.properties
@@ -64,3 +64,12 @@ enhancementPopup.label=Enhancement
 play.prepare.init=Initialize:
 play.prepare.chooseCollection=Choose collection:
 play.prepare.selectColor=Select color:
+
+#menu
+menu.toHand=Hand
+menu.toLand=Land
+menu.toMagic=Magic
+menu.toArtifact=Artifact
+menu.toCreature=Creature
+menu.toGraveyard=Graveyard
+menu.toOut=Out
