--- a/MagicOfGathering/locale/zh_CN/main.properties
+++ b/MagicOfGathering/locale/zh_CN/main.properties
@@ -63,3 +63,12 @@ enhancementPopup.label=增强
 play.prepare.init=初始化:
 play.prepare.chooseCollection=选择套牌:
 play.prepare.selectColor=选择颜色:
+
+#menu
+menu.toHand=手牌
+menu.toLand=地牌
+menu.toMagic=魔法
+menu.toArtifact=宝物
+menu.toCreature=生物
+menu.toGraveyard=坟场
+menu.toOut=移出战场
