--- a/MagicOfGathering/locale/en_US/main.properties
+++ b/MagicOfGathering/locale/en_US/main.properties
@@ -22,6 +22,7 @@ playContainer.label=Play
 
 # init container
 initContainer.initDatabase=Initialize database
+initContainer.showCardDetailTip=Show card detail when mouse over
 
 # load container
 loadContainer.title=Extract cards:
