--- a/MagicOfGathering/locale/zh_CN/main.properties
+++ b/MagicOfGathering/locale/zh_CN/main.properties
@@ -22,6 +22,7 @@ playContainer.label=游戏
 
 # init container
 initContainer.initDatabase=初始化数据库
+initContainer.showCardDetailTip=当鼠标经过牌时显示其详细信息
 
 # load container
 loadContainer.title=提取卡牌:
