--- a/MagicOfGathering/locale/en_US/main.properties
+++ b/MagicOfGathering/locale/en_US/main.properties
@@ -13,6 +13,7 @@ graveyard=Grave yard
 outOfPlay=Out of play
 hp=HP
 magicPool=Magic Pool
+edit=Edit
 
 # view containers' name
 initContainer.label=Initialize
@@ -44,6 +45,16 @@ buildContainer.list.title4=Description
 buildContainer.list.title5=Count
 buildContainer.save=Save
 buildContainer.saving=Saving......
+
+# action editor
+action.edit.addAction=Add action
+action.edit.self=Self
+action.edit.targetPlayer=Target player
+action.edit.targetPlayers=Target players
+action.edit.selfCard=Self Card
+action.edit.targetCard=Target card
+action.edit.targetCards=Target cards
+
 
 # play container
 play.list.count=Count:
