--- a/MagicOfGathering/locale/zh_CN/main.properties
+++ b/MagicOfGathering/locale/zh_CN/main.properties
@@ -13,6 +13,7 @@ graveyard=坟场
 outOfPlay=战场外
 hp=血量
 magicPool=魔法池
+edit=编辑
 
 # view containers' name
 initContainer.label=初始化
@@ -44,6 +45,15 @@ buildContainer.list.title4=描述
 buildContainer.list.title5=数量
 buildContainer.save=保存
 buildContainer.saving=保存中......
+
+# action editor
+action.edit.addAction=添加行为
+action.edit.self=自己
+action.edit.targetPlayer=目标玩家
+action.edit.targetPlayers=多个目标玩家
+action.edit.selfCard=本牌
+action.edit.targetCard=目标牌
+action.edit.targetCards=多个目标牌
 
 # play container
 play.list.count=数量:
