--- a/MagicOfGathering/locale/en_US/main.properties
+++ b/MagicOfGathering/locale/en_US/main.properties
@@ -15,6 +15,14 @@ hp=HP
 magicPool=Magic Pool
 edit=Edit
 
+# colors
+red=Red
+blue=Blue
+green=Green
+white=White
+black=Black
+colorless=Colorless
+
 # view containers' name
 initContainer.label=Initialize
 loadContainer.label=Load
@@ -48,6 +56,7 @@ buildContainer.saving=Saving......
 
 # action editor
 action.edit.addAction=Add action
+action.edit.saveToFile=Save to file
 action.edit.self=Self
 action.edit.targetPlayer=Target player
 action.edit.targetPlayers=Target players
