--- a/MagicOfGathering/locale/zh_CN/main.properties
+++ b/MagicOfGathering/locale/zh_CN/main.properties
@@ -15,6 +15,14 @@ hp=血量
 magicPool=魔法池
 edit=编辑
 
+# colors
+red=红色
+blue=蓝色
+green=绿色
+white=白色
+black=黑色
+colorless=无色
+
 # view containers' name
 initContainer.label=初始化
 loadContainer.label=读取卡牌
@@ -48,12 +56,14 @@ buildContainer.saving=保存中......
 
 # action editor
 action.edit.addAction=添加行为
+action.edit.saveToFile=保存到文件
 action.edit.self=自己
 action.edit.targetPlayer=目标玩家
 action.edit.targetPlayers=多个目标玩家
 action.edit.selfCard=本牌
 action.edit.targetCard=目标牌
 action.edit.targetCards=多个目标牌
+
 
 # play container
 play.list.count=数量:
