--- a/trunk/MagicOfGathering/locale/zh_CN/main.properties
+++ b/trunk/MagicOfGathering/locale/zh_CN/main.properties
@@ -54,6 +54,9 @@ buildContainer.list.title5=数量
 buildContainer.save=保存
 buildContainer.saving=保存中......
 
+# card editor
+card.edit.magicPoolLabel=法力消耗:
+
 # action editor
 action.edit.addAction=添加行为
 action.edit.saveToFile=保存到文件
