--- a/MagicOfGathering/locale/en_US/main.properties
+++ b/MagicOfGathering/locale/en_US/main.properties
@@ -54,6 +54,9 @@ buildContainer.list.title5=Count
 buildContainer.save=Save
 buildContainer.saving=Saving......
 
+# card editor
+card.edit.magicPoolLabel=This card will cost:
+
 # action editor
 action.edit.addAction=Add action
 action.edit.saveToFile=Save to file
