--- a/trunk/MagicOfGathering/locale/en_US/action.properties
+++ b/trunk/MagicOfGathering/locale/en_US/action.properties
@@ -1,3 +1,3 @@
 # locale/en_US/action.properties
-cardAction.MagicPoolChange.generate=Gen {num} {name}
-cardAction.MagicPoolChange.remove=Remove {num} {name}
+cardAction.MagicPoolChange.generate=Gen {0} {1}
+cardAction.MagicPoolChange.remove=Remove {0} {1}
