--- a/MagicOfGathering/locale/zh_CN/action.properties
+++ b/MagicOfGathering/locale/zh_CN/action.properties
@@ -1,3 +1,3 @@
 # locale/zh_CN/action.properties
-cardAction.MagicPoolChange.generate=生成 {num}点{name}
-cardAction.MagicPoolChange.remove=消去 {num}点{name}
+cardAction.MagicPoolChange.generate=生成 {0}点{1}
+cardAction.MagicPoolChange.remove=消去 {0}点{1}
