--- a/trunk/MagicOfGathering/locale/en_US/main.properties
+++ b/trunk/MagicOfGathering/locale/en_US/main.properties
@@ -15,6 +15,15 @@ hp=HP
 magicPool=Magic Pool
 edit=Edit
 
+# card type
+type.creature=Creature
+type.enchantment=Enchantment
+type.instant=Instant
+type.artifact=Artifact
+type.land=Land
+type.sorcery=Sorcery
+type.list=Creature,Enchantment,Instant,Artifact,Land,Sorcery
+
 # colors
 red=Red
 blue=Blue
