--- a/MagicOfGathering/locale/zh_CN/main.properties
+++ b/MagicOfGathering/locale/zh_CN/main.properties
@@ -15,6 +15,15 @@ hp=血量
 magicPool=魔法池
 edit=编辑
 
+# card type
+type.creature=生物
+type.enchantment=增强类法术
+type.instant=瞬发类法术
+type.artifact=宝物
+type.land=地牌
+type.sorcery=法术
+type.list=生物,增强类法术,瞬发类法术,宝物,地牌,法术
+
 # colors
 red=红色
 blue=蓝色
