--- a/MagicOfGathering/locale/en_US/main.properties
+++ b/MagicOfGathering/locale/en_US/main.properties
@@ -99,6 +99,7 @@ play.prepare.chooseCollection=Choose collection:
 play.prepare.selectColor=Select color:
 
 #menu
+menu.cast=Cast
 menu.toHand=Hand
 menu.toLand=Land
 menu.toMagic=Magic
