--- a/MagicOfGathering/locale/zh_CN/main.properties
+++ b/MagicOfGathering/locale/zh_CN/main.properties
@@ -98,6 +98,7 @@ play.prepare.chooseCollection=选择套牌:
 play.prepare.selectColor=选择颜色:
 
 #menu
+menu.cast=施放
 menu.toHand=手牌
 menu.toLand=地牌
 menu.toMagic=魔法
