--- a/MagicOfGathering/locale/en_US/main.properties
+++ b/MagicOfGathering/locale/en_US/main.properties
@@ -24,6 +24,12 @@ type.land=Land
 type.sorcery=Sorcery
 type.list=Creature,Enchantment,Instant,Artifact,Land,Sorcery
 
+type.creature.attack=Attack
+type.creature.defense=Defense
+type.creature.flying=Flying
+type.creature.reach=Reach
+type.creature.firstStrike=First Strike
+
 # colors
 red=Red
 blue=Blue
