--- a/MagicOfGathering/locale/zh_CN/main.properties
+++ b/MagicOfGathering/locale/zh_CN/main.properties
@@ -24,6 +24,12 @@ type.land=地牌
 type.sorcery=法术
 type.list=生物,增强类法术,瞬发类法术,宝物,地牌,法术
 
+type.creature.attack=攻击力
+type.creature.defense=防御力
+type.creature.flying=飞行
+type.creature.reach=防空
+type.creature.firstStrike=先制攻击
+
 # colors
 red=红色
 blue=蓝色
