--- a/MagicOfGathering/locale/en_US/main.properties
+++ b/MagicOfGathering/locale/en_US/main.properties
@@ -98,6 +98,7 @@ play.untapAll=Untap all
 loadCardCollPopup.loadList=Collection List
 graveyardPopup.label=Card in Graveyard
 enhancementPopup.label=Enhancement
+payColorlessPopup.label=Pay colorless selection
 
 #prepare
 play.prepare.init=Initialize:
