--- a/MagicOfGathering/locale/zh_CN/main.properties
+++ b/MagicOfGathering/locale/zh_CN/main.properties
@@ -97,6 +97,7 @@ play.untapAll=还原所有牌
 loadCardCollPopup.loadList=存储的套牌
 graveyardPopup.label=坟场中的牌
 enhancementPopup.label=增强
+payColorlessPopup.label=选择用于支付无色法力的法力点
 
 #prepare
 play.prepare.init=初始化:
