--- a/MagicOfGathering/locale/en_US/main.properties
+++ b/MagicOfGathering/locale/en_US/main.properties
@@ -99,6 +99,8 @@ loadCardCollPopup.loadList=Collection List
 graveyardPopup.label=Card in Graveyard
 enhancementPopup.label=Enhancement
 payColorlessPopup.label=Pay colorless selection
+payColorlessPopup.payLabel=Colorless required:
+payColorlessPopup.playerLabel=Available:
 
 #prepare
 play.prepare.init=Initialize:
