--- a/MagicOfGathering/locale/zh_CN/main.properties
+++ b/MagicOfGathering/locale/zh_CN/main.properties
@@ -98,6 +98,8 @@ loadCardCollPopup.loadList=存储的套牌
 graveyardPopup.label=坟场中的牌
 enhancementPopup.label=增强
 payColorlessPopup.label=选择用于支付无色法力的法力点
+payColorlessPopup.payLabel=需要支付的无色法力点
+payColorlessPopup.playerLabel=可用的法力点
 
 #prepare
 play.prepare.init=初始化:
