--- a/trunk/MagicOfGathering/locale/zh_CN/main.properties
+++ b/trunk/MagicOfGathering/locale/zh_CN/main.properties
@@ -92,6 +92,7 @@ play.creatureList.title=战场 - 生物:
 play.magicList.title=战场 - 魔法:
 play.artifactList.title=战场 - 宝物:
 play.untapAll=还原所有牌
+play.tapAllLand=横置所有地牌
 
 #popups
 loadCardCollPopup.loadList=存储的套牌
