--- a/MagicOfGathering/locale/en_US/main.properties
+++ b/MagicOfGathering/locale/en_US/main.properties
@@ -92,6 +92,7 @@ play.creatureList.title=Field - Creatures:
 play.magicList.title=Field - Magic:
 play.artifactList.title=Field - artifact:
 play.untapAll=Untap all
+play.tapAllLand=Tap all land cards
 
 
 #popups
