--- a/MagicOfGathering/locale/en_US/main.properties
+++ b/MagicOfGathering/locale/en_US/main.properties
@@ -102,6 +102,8 @@ enhancementPopup.label=Enhancement
 payColorlessPopup.label=Pay colorless selection
 payColorlessPopup.payLabel=Colorless required:
 payColorlessPopup.playerLabel=Available:
+attackPopup.attackCard=Attacker
+attackPopup.defenseCard=Defenders
 
 #prepare
 play.prepare.init=Initialize:
