--- a/MagicOfGathering/locale/zh_CN/main.properties
+++ b/MagicOfGathering/locale/zh_CN/main.properties
@@ -101,6 +101,8 @@ enhancementPopup.label=增强
 payColorlessPopup.label=选择用于支付无色法力的法力点
 payColorlessPopup.payLabel=需要支付的无色法力点
 payColorlessPopup.playerLabel=可用的法力点
+attackPopup.attackCard=攻击
+attackPopup.defenseCard=防御
 
 #prepare
 play.prepare.init=初始化:
