--- a/trunk/MagicOfGathering/locale/zh_CN/main.properties
+++ b/trunk/MagicOfGathering/locale/zh_CN/main.properties
@@ -93,6 +93,7 @@ play.magicList.title=战场 - 魔法:
 play.artifactList.title=战场 - 宝物:
 play.untapAll=还原所有牌
 play.tapAllLand=横置所有地牌
+play.attack=展开攻击
 
 #popups
 loadCardCollPopup.loadList=存储的套牌
