--- a/MagicOfGathering/locale/en_US/main.properties
+++ b/MagicOfGathering/locale/en_US/main.properties
@@ -93,6 +93,7 @@ play.magicList.title=Field - Magic:
 play.artifactList.title=Field - artifact:
 play.untapAll=Untap all
 play.tapAllLand=Tap all land cards
+play.attack=Begin attack
 
 
 #popups
