--- a/MagicOfGathering/locale/en_US/main.properties
+++ b/MagicOfGathering/locale/en_US/main.properties
@@ -68,6 +68,7 @@ buildContainer.list.title4=Description
 buildContainer.list.title5=Count
 buildContainer.save=Save
 buildContainer.saving=Saving......
+buildContainer.saveSuccess=Save success.
 
 # card editor
 card.edit.magicPoolLabel=This card will cost:
