--- a/trunk/MagicOfGathering/locale/zh_CN/main.properties
+++ b/trunk/MagicOfGathering/locale/zh_CN/main.properties
@@ -68,6 +68,7 @@ buildContainer.list.title4=描述
 buildContainer.list.title5=数量
 buildContainer.save=保存
 buildContainer.saving=保存中......
+buildContainer.saveSuccess=保存成功.
 
 # card editor
 card.edit.magicPoolLabel=法力消耗:
