--- a/trunk/HsGameSaver/locale/zh_CN/main.properties
+++ b/trunk/HsGameSaver/locale/zh_CN/main.properties
@@ -1,6 +1,23 @@
 #common
 add=添加
+save=保存
+delete=删除
+remove=移除
 
+#path configuration view
+pathConfView.inputName=输入游戏名(有Bug，不能输中文):
+pathConfView.inputPath=选择游戏路径:
+pathConfView.inputSavePath=选择游戏存档路径:
+pathConfView.inputIncludes=包含文件类型:
+pathConfView.inputExcludes=不包含文件类型:
+
+pathConfView.column.name=游戏名
+pathConfView.column.path=路径
+pathConfView.column.savePath=存档路径
+pathConfView.column.includes=包含
+pathConfView.column.excludes=不包含
+
+pathConfView.zip=生成ZIP压缩文件
 #popups
 popup.initConfigView.title=初始化设置
 popup.initConfigPopup.addDrives=添加磁盘分区
