--- a/HsGameSaver/locale/en_US/main.properties
+++ b/HsGameSaver/locale/en_US/main.properties
@@ -1,6 +1,23 @@
 #common
 add=Add
+save=Save
+delete=Delete
+remove=Remove
 
+#path configuration view
+pathConfView.inputName=Input game name (English only):
+pathConfView.inputPath=Input game path:
+pathConfView.inputSavePath=Input save path:
+pathConfView.inputIncludes=Include types:
+pathConfView.inputExcludes=Exclude types:
+
+pathConfView.column.name=Name
+pathConfView.column.path=Path
+pathConfView.column.savePath=Save Path
+pathConfView.column.includes=Includes
+pathConfView.column.excludes=Excludes
+
+pathConfView.zip=Generate ZIP File
 
 #popups
 popup.initConfigPopup.title=Initialize configuration
