--- a/HsGameSaver/locale/en_US/main.properties
+++ b/HsGameSaver/locale/en_US/main.properties
@@ -17,6 +17,12 @@ pathConfView.column.savePath=Save Path
 pathConfView.column.includes=Includes
 pathConfView.column.excludes=Excludes
 
+pathConfView.browsePath=Please select the game folder path:
+pathConfView.browseSavePath=Please select the save folder path:
+pathConfView.fullfillData=Please fill all required columns.
+pathConfView.pathNotAvailable=either the path or save path is not available.
+pathConfView.zipSuccess=ZIP is saved in "{0}".
+
 pathConfView.zip=Generate ZIP File
 
 #popups
