--- a/HsGameSaver/locale/zh_CN/main.properties
+++ b/HsGameSaver/locale/zh_CN/main.properties
@@ -17,6 +17,12 @@ pathConfView.column.savePath=存档路径
 pathConfView.column.includes=包含
 pathConfView.column.excludes=不包含
 
+pathConfView.browsePath=游戏在哪里？
+pathConfView.browseSavePath=游戏存档在哪里？
+pathConfView.fullfillData=有些空没填，填一下。
+pathConfView.pathNotAvailable=我没找到你说的游戏目录或者游戏存档目录，怎么回事？
+pathConfView.zipSuccess=存好了，放在“{0}”了。
+
 pathConfView.zip=生成ZIP压缩文件
 #popups
 popup.initConfigView.title=初始化设置
