--- a/HsGameSaver/locale/en_US/main.properties
+++ b/HsGameSaver/locale/en_US/main.properties
@@ -21,6 +21,7 @@ pathConfView.browsePath=Please select the game folder path:
 pathConfView.browseSavePath=Please select the save folder path:
 pathConfView.fullfillData=Please fill all required columns.
 pathConfView.pathNotAvailable=either the path or save path is not available.
+pathConfView.generatingZip=Generating ZIP......
 pathConfView.zipSuccess=ZIP is saved in "{0}".
 
 pathConfView.zip=Generate ZIP File
