--- a/HsGameSaver/locale/en_US/main.properties
+++ b/HsGameSaver/locale/en_US/main.properties
@@ -8,12 +8,14 @@ remove=Remove
 pathConfView.inputName=Input game name (English only):
 pathConfView.inputPath=Input game path:
 pathConfView.inputSavePath=Input save path:
+pathConfView.includeSubFolder=Include sub-folder
 pathConfView.inputIncludes=Include types:
 pathConfView.inputExcludes=Exclude types:
 
 pathConfView.column.name=Name
 pathConfView.column.path=Path
 pathConfView.column.savePath=Save Path
+pathConfView.column.subFolder=Sub-folder
 pathConfView.column.includes=Includes
 pathConfView.column.excludes=Excludes
 
@@ -21,10 +23,17 @@ pathConfView.browsePath=Please select the game folder path:
 pathConfView.browseSavePath=Please select the save folder path:
 pathConfView.fullfillData=Please fill all required columns.
 pathConfView.pathNotAvailable=either the path or save path is not available.
-pathConfView.generatingZip=Generating ZIP......
-pathConfView.zipSuccess=ZIP is saved in "{0}".
+pathConfView.generatingZip=Processing......
+pathConfView.zipSuccess=Process success in "{0}".
 
-pathConfView.zip=Generate ZIP File
+pathConfView.zip=Generate
+
+pathConfView.isZipEnabled=generate as ZIP
+pathConfView.browseCopyPath=browse copy path
+
+pathConfView.logGameSuccess=Game "{0}" saved success. 
+pathConfView.logGameFailed=Game "{0}": save path "{1}" read failed.
+
 
 #popups
 popup.initConfigPopup.title=Initialize configuration
