--- a/HsGameSaver/locale/zh_CN/main.properties
+++ b/HsGameSaver/locale/zh_CN/main.properties
@@ -8,12 +8,14 @@ remove=移除
 pathConfView.inputName=输入游戏名(有Bug，不能输中文):
 pathConfView.inputPath=选择游戏路径:
 pathConfView.inputSavePath=选择游戏存档路径:
+pathConfView.includeSubFolder=包含子文件夹
 pathConfView.inputIncludes=包含文件类型:
 pathConfView.inputExcludes=不包含文件类型:
 
 pathConfView.column.name=游戏名
 pathConfView.column.path=路径
 pathConfView.column.savePath=存档路径
+pathConfView.column.subFolder=子目录
 pathConfView.column.includes=包含
 pathConfView.column.excludes=不包含
 
@@ -21,10 +23,17 @@ pathConfView.browsePath=游戏在哪里？
 pathConfView.browseSavePath=游戏存档在哪里？
 pathConfView.fullfillData=有些空没填，填一下。
 pathConfView.pathNotAvailable=我没找到你说的游戏目录或者游戏存档目录，怎么回事？
-pathConfView.generatingZip=生成ZIP呢......
+pathConfView.generatingZip=处理中，处理中，处理中......
 pathConfView.zipSuccess=存好了，放在“{0}”了。
 
-pathConfView.zip=生成ZIP压缩文件
+pathConfView.isZipEnabled=生成ZIP模式
+pathConfView.browseCopyPath=选择目标文件夹
+
+pathConfView.zip=生成
+pathConfView.logGameSuccess=游戏"{0}"存储成功，耶！
+pathConfView.logGameFailed=游戏"{0}"于存档位置"{1}"读取失败，靠，日你！
+
+
 #popups
 popup.initConfigView.title=初始化设置
 popup.initConfigPopup.addDrives=添加磁盘分区
