--- a/trunk/HsGameSaver/locale/en_US/main.properties
+++ b/trunk/HsGameSaver/locale/en_US/main.properties
@@ -4,6 +4,14 @@ save=Save
 delete=Delete
 remove=Remove
 
+name=Name
+path=Path
+savePath=Save Path
+subFolder=Sub-folder
+filters=Filters
+includes=Includes
+excludes=Excludes
+
 #path configuration view
 pathConfView.inputName=Input game name (English only):
 pathConfView.inputPath=Input game path:
