--- a/HsGameSaver/locale/zh_CN/main.properties
+++ b/HsGameSaver/locale/zh_CN/main.properties
@@ -4,6 +4,14 @@ save=保存
 delete=删除
 remove=移除
 
+name=游戏名
+path=路径
+savePath=存档路径
+subFolder=子目录
+filters=过滤器
+includes=包含
+excludes=不包含
+
 #path configuration view
 pathConfView.inputName=输入游戏名(有Bug，不能输中文):
 pathConfView.inputPath=选择游戏路径:
