--- a/trunk/HsGameSaver/locale/en_US/main.properties
+++ b/trunk/HsGameSaver/locale/en_US/main.properties
@@ -12,6 +12,9 @@ filters=Filters
 includes=Includes
 excludes=Excludes
 
+configuration=Configuration
+language=Language
+
 #path configuration view
 pathConfView.inputName=Input game name (English only):
 pathConfView.inputPath=Input game path:
