--- a/HsGameSaver/locale/zh_CN/main.properties
+++ b/HsGameSaver/locale/zh_CN/main.properties
@@ -12,6 +12,9 @@ filters=过滤器
 includes=包含
 excludes=不包含
 
+configuration=设置
+language=语言
+
 #path configuration view
 pathConfView.inputName=输入游戏名(有Bug，不能输中文):
 pathConfView.inputPath=选择游戏路径:
