--- a/HsGameSaver/locale/zh_CN/main.properties
+++ b/HsGameSaver/locale/zh_CN/main.properties
@@ -14,6 +14,7 @@ excludes=不包含
 
 configuration=设置
 language=语言
+outputFolder=输出文件夹
 
 #path configuration view
 pathConfView.inputName=输入游戏名(有Bug，不能输中文):
