--- a/HsGameSaver/locale/en_US/main.properties
+++ b/HsGameSaver/locale/en_US/main.properties
@@ -14,6 +14,7 @@ excludes=Excludes
 
 configuration=Configuration
 language=Language
+outputFolder=Output Folder
 
 #path configuration view
 pathConfView.inputName=Input game name (English only):
