--- a/HsGameSaver/locale/en_US/main.properties
+++ b/HsGameSaver/locale/en_US/main.properties
@@ -16,6 +16,18 @@ configuration=Configuration
 language=Language
 outputFolder=Output Folder
 
+#game container
+gameContainer.saveUserDataSuccessTitle=Save Data
+gameContainer.saveUserDataSuccessMessage=Your data is saved successfully!
+gameContainer.saveUserDataFailedTitle=Save Data
+gameContainer.saveUserDataFailedMessage=Operation failed, please check whether the configuration file writable?
+gameContainer.zipSuccessTitle=Backup Operation
+gameContainer.zipSuccessMessage=Operation success! Output to "{0}"!
+gameContainer.zipFailedTitle=Backup Operation
+gameContainer.zipFailedMessage=Operation Failed!
+
+
+
 #path configuration view
 pathConfView.inputName=Input game name (English only):
 pathConfView.inputPath=Input game path:
