--- a/trunk/HsGameSaver/locale/zh_CN/main.properties
+++ b/trunk/HsGameSaver/locale/zh_CN/main.properties
@@ -16,6 +16,18 @@ configuration=设置
 language=语言
 outputFolder=输出文件夹
 
+#game container
+gameContainer.saveUserDataSuccessTitle=保存信息
+gameContainer.saveUserDataSuccessMessage=您的信息已经保存成功！
+gameContainer.saveUserDataFailedTitle=保存信息
+gameContainer.saveUserDataFailedMessage=保存失败，你看看在根目录下的conf.xml配置文件能修改么？
+gameContainer.zipSuccessTitle=备份
+gameContainer.zipSuccessMessage=备份成功！ 路径在“{0}”！
+gameContainer.zipFailedTitle=备份
+gameContainer.zipFailedMessage=失败了！晕倒！
+
+
+
 #path configuration view
 pathConfView.inputName=输入游戏名(有Bug，不能输中文):
 pathConfView.inputPath=选择游戏路径:
