--- a/trunk/HsGameSaver/locale/en_US/main.properties
+++ b/trunk/HsGameSaver/locale/en_US/main.properties
@@ -15,6 +15,8 @@ excludes=Excludes
 configuration=Configuration
 language=Language
 outputFolder=Output Folder
+autoUpdate=Auto Update
+autoUpdateNotSupported=Auto update is not supported now.
 
 #game container
 gameContainer.saveUserDataSuccessTitle=Save Data
@@ -63,3 +65,8 @@ pathConfView.logGameFailed=Game "{0}": save path "{1}" read failed.
 popup.initConfigPopup.title=Initialize configuration
 popup.initConfigPopup.addDrives=Add your hard disk drives
 popup.initConfigPopup.drive=Hard Drive:
+
+
+#help
+helpTitle=Help
+helpMessage=To be done.
