--- a/trunk/HsShowCase/locale/en_US/imageCropper.properties
+++ b/trunk/HsShowCase/locale/en_US/imageCropper.properties
@@ -1,1 +1,4 @@
 imageCropper.alertSelectedArea=Show Area
+imageCropper.aspectRatioCheckBox=Maintain aspect ratio
+imageCropper.minSelectionW=Min width
+imageCropper.minSelectionH=Min height 
