--- a/trunk/HsShowCase/locale/zh_CN/imageCropper.properties
+++ b/trunk/HsShowCase/locale/zh_CN/imageCropper.properties
@@ -1,1 +1,4 @@
 imageCropper.alertSelectedArea=选择区域
+imageCropper.aspectRatioCheckBox=保持纵横比
+imageCropper.minSelectionW=最小宽度
+imageCropper.minSelectionH=最小高度
