--- a/trunk/HsShowCase/locale/en_US/utility.properties
+++ b/trunk/HsShowCase/locale/en_US/utility.properties
@@ -1,3 +1,4 @@
+util.oauth.name=OAuth Request Header Generator
 util.oauth.consumerKey=Consumer Key
 util.oauth.consumerSecret=Consumer Secret
 util.oauth.tokenKey=Req/Acc Token Key
